--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@
 .c:hover {
 	background-color: royalblue;
 }
+.d:hover {
+	background-color: darkblue;
+}
 header {
 	position: fixed;
 	background-color: black;
@@ -33,7 +36,7 @@ ul {
 	background-color: black;
 }
 li {
-	height: calc(100vh / 3);
+	height: calc(100vh / 4);
 	width: 100vw;
 	display: flex;
 	justify-content: flex-end;
@@ -43,8 +46,15 @@ li {
 	font-size: 15pt;
 	color: aliceblue;
 }
-li:hover {
+li:hover a {
 	color: black;
+}
+.d:hover a {
+	color: white;
+}
+a {
+	color: white;
+	text-decoration-line: none;
 }
 footer {
 	background-color: black;
@@ -61,6 +71,7 @@ p {
 	color: slategrey;
 	font-size: 10pt;
 }
+
 
 @media screen and (max-width: 800px) {
 	* {
